fix: improve nav alignment
* swapped BLOG and RESUME links improve balance of text

* further improve the alignment of links within the navigation grid

--- a/style.css
+++ b/style.css
@@ -163,12 +163,23 @@ main {
     height: 100%; /* bruh */
 }
 
-#navLinks > div {
+#navLinks div {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    --border-spacing: 2.5rem;
+}
+
+#navLinks .div3, #navLinks .div9 {
+    padding-right: var(--border-spacing);
+    justify-content: flex-end;
+}
+
+#navLinks .div1, #navLinks .div7 {
+    padding-left: var(--border-spacing);
+    justify-content: flex-start;
 }
 
 #navLinks * {
@@ -213,8 +224,6 @@ main {
 
 .div10 {
     grid-area: 4 / 1 / 5 / 4;
-    align-items: flex-start;
-    justify-content: center;
 }
 
 .postCard {
